--- a/Cleo/Cleo.csproj
+++ b/Cleo/Cleo.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RootNamespace>Flipbop.Cleo</RootNamespace>
-		<Version>0.1.0</Version>
+		<Version>0.8.1</Version>
 
 		<TargetFramework>net8.0</TargetFramework>
 		<LangVersion>12.0</LangVersion>
