--- a/Cleo/Cleo.csproj
+++ b/Cleo/Cleo.csproj
@@ -19,4 +19,7 @@
 		<PackageReference Include="Nickel.ModBuildConfig" Version="2.0.1" />
 		<PackageReference Include="EnumByNameSourceGenerator" Version="1.1.2" PrivateAssets="All" ExcludeAssets="runtime" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="docs\images\" />
+	</ItemGroup>
 </Project>
